--- a/WaterPipes/WaterPipes.csproj
+++ b/WaterPipes/WaterPipes.csproj
@@ -42,8 +42,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BorderField.cs" />
+    <Compile Include="Cell.cs" />
+    <Compile Include="Cursor.cs" />
+    <Compile Include="Field.cs" />
+    <Compile Include="CellState.cs" />
+    <Compile Include="Game.cs" />
+    <Compile Include="IKey.cs" />
+    <Compile Include="KeyEnter.cs" />
+    <Compile Include="KeyS.cs" />
+    <Compile Include="KeySpace.cs" />
+    <Compile Include="Moves.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShowField.cs" />
+    <Compile Include="CountStep.cs" />
+    <Compile Include="StepDown.cs" />
+    <Compile Include="StepLeft.cs" />
+    <Compile Include="StepRight.cs" />
+    <Compile Include="StepUp.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
